2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: accumulate_nonzero_bytes

	* b-divvy.h (accumulate_nonzero_bytes): New func decl.
	* b-divvy.c (accumulate_nonzero_bytes): New func.
	* merger.c (normalize_arg): Use `accumulate_nonzero_bytes'.
	* rcsdiff.c (main): Likewise.
	* rcsfnms.c (set_temporary_file_name): Likewise.

2010-04-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `shared' space for temporary filename templating.

	* rcsfnms.c (set_temporary_file_name): Save `tmpdir' in `shared'.
	Also use `shared' temporarily for template string.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `shared' space for filename arg normalization.

	* rcsdiff.c (main): Use `shared' space for prepending "./".

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Get rid of `trealloc'.

	* rcsedit.c (insertline): Use `testrealloc' directly.
	* rcsfnms.c (bufrealloc): Likewise.
	* base.h (trealloc): Delete macro.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Get rid of `tnalloc'.

	* rcsedit.c (insertline): Use `testalloc' directly.
	* rcsfnms.c (bufalloc): Likewise.
	* rcslex.c (fd2_RILE): Likewise.
	* base.h (talloc): Likewise.
	(tnalloc): Delete macro.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for rcsdiff `diffvstr' construction.

	* rcsdiff.c: #include "b-divvy.h".
	(main): Use `shared' space for `diffvstr' construction.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `single' space for log message handling.

	* rcslex.c (savestring): Don't write to `target';
	use `single' space instead.
	* rcsgen.c (cleanlogmsg): Take first arg as `const'.
	(scandeltatext): Update calls to `savestring', `cleanlogmsg'.
	* rcs.c (scanlogtext): Likewise.
	* rcssyn.c (Commleader): Delete now-unused `struct buf'.
	(getadmin): Update calls to `savestring'.
	* rlog.c (readdeltalog): Likewise.
	* base.h (cleanlogmsg, savestring): Update func decls.